--- a/style.css
+++ b/style.css
@@ -241,6 +241,10 @@ i.arrow:hover {
   background-repeat: no-repeat !important;
   background-size: cover !important;
 }
+footer{
+  height:50px;
+  background-color:#151515;
+}
 
 /* WhiteBackGround */
 .container.active {
@@ -268,4 +272,7 @@ h2.active {
 .toggle-ball.active {
   background-color: white;
   transform: translateX(-20px);
+}
+footer.active{
+  background-color:white;
 }
