--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ i.arrow:hover {
   background-size: cover !important;
 }
 footer{
-  height:100px;
+  min-height:100px;
   background-color:#151515;
 }
 
